# orators

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
crates/orators/: Cargo.toml
crates/orators-core/: Cargo.toml
crates/orators-core/src/: config.rs  dbus.rs  diagnostics.rs  error.rs  lib.rs  state.rs  types.rs
crates/orators-linux/: Cargo.toml
crates/orators-linux/src/: audio.rs  bluealsa.rs  bluez.rs  diagnostics.rs  lib.rs  owned_backend.rs  systemd.rs  wireplumber.rs
crates/orators/src/: cli.rs  control.rs  daemon.rs  lib.rs  service.rs  tui.rs
crates/orators/tests/: cli_smoke.rs
