[workspace]
members = [
  "crates/orators-core",
  "crates/orators-linux",
  "crates/orators",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
assert_cmd = "2.1.1"
clap = { version = "4.5.48", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
zbus = { version = "4.4.0", features = ["tokio"] }

