[package]
name = "orators-linux"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
libc.workspace = true
orators-core = { path = "../orators-core" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
zbus.workspace = true

[dev-dependencies]
tempfile.workspace = true
