[package]
name = "orators"
edition.workspace = true
license.workspace = true
publish = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
crossterm.workspace = true
dirs.workspace = true
orators-core = { path = "../orators-core" }
orators-linux = { path = "../orators-linux" }
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zbus.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
